hamburger icon  alignment fixed

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -101,6 +101,7 @@
         position: absolute;
         right: 0;
         top: 0;
+        bottom: 20px;
         display: block;
     }
 
